--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
     <div id="myModal" class="modal text-center p-3">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <p>一般七星菸盒內容為幾根紙菸呢?</p>
-          <button type="button" class="btn btn-primary btn-sm" onclick="validateAnswer(5)">5根</button>
-          <button type="button" class="btn btn-primary btn-sm" onclick="validateAnswer(10)">10根</button>
-          <button type="button" class="btn btn-primary btn-sm" onclick="validateAnswer(15)">15根</button>
-          <button type="button" class="btn btn-primary btn-sm" onclick="validateAnswer(20)">20根</button>
+          <p>問題文字將在這裡顯示</p>
+          <div></div> <!-- 用於放置按鈕的容器 -->
         </div>
       </div>
+      
 </body>
 </html>
