--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAC-大家來找碴</title>
+    <title>大家來找碴</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header class="title">
-        <h1 class="titleName">DAC-大家來找碴</h1>
+        <h1 class="titleName">大家來找碴</h1>
         <h2>Find The 5 Differences</h2>
         <div id="timer">60</div>
     </header>
@@ -26,7 +26,7 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           <p>問題文字將在這裡顯示</p>
-          <div></div> <!-- 用於放置按鈕的容器 -->
+          <div></div>
         </div>
       </div>
       
